Big fix - Attempt to resolve zoom on iphone when text field is in focus by adding a :focus selector in CSS.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,6 +8,10 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
  font-family: 'Cantarell', sans-serif;
 }
 
+input:focus {
+  font-size: 16px;
+}
+
 .modal-content {
   border-radius: 0 !important;
 }
